force-app/main/default/objects/FAQ__kav/fields/conseilExpert__c.field-meta.xml
<CustomField>
    <fullName>conseilExpert__c</fullName>
    <label>Conseil Expert</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>