force-app/main/default/objects/FAQ__kav/fields/fichier__c.field-meta.xml
<CustomField>
    <fullName>fichier__c</fullName>
    <label>Fichier</label>
    <type>File</type>
</CustomField>