force-app/main/default/objects/FAQ__kav/fields/question__c.field-meta.xml
<CustomField>
    <fullName>question__c</fullName>
    <label>Question</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>