force-app/main/default/objects/FAQ__kav/fields/reponse__c.field-meta.xml
<CustomField>
    <fullName>reponse__c</fullName>
    <label>Réponse</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>