force-app/main/default/objects/FAQ__kav/fields/reponseCall__c.field-meta.xml
<CustomField>
    <fullName>reponseCall__c</fullName>
    <label>Réponse (Call)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>