force-app/main/default/objects/FAQ__kav/fields/reponseClient__c.field-meta.xml
<CustomField>
    <fullName>reponseClient__c</fullName>
    <label>Réponse (Client)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>