force-app/main/default/objects/FAQ__kav/fields/reponseCommercial__c.field-meta.xml
<CustomField>
    <fullName>reponseCommercial__c</fullName>
    <label>Réponse (Commercial)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>