force-app/main/default/objects/FAQ__kav/fields/reponseDirection__c.field-meta.xml
<CustomField>
    <fullName>reponseDirection__c</fullName>
    <label>Réponse (Direction)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>