force-app/main/default/objects/FAQ__kav/fields/reponseInstallateur__c.field-meta.xml
<CustomField>
    <fullName>reponseInstallateur__c</fullName>
    <label>Réponse (Installateur)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>