force-app/main/default/objects/FAQ__kav/fields/reponseMetreur__c.field-meta.xml
<CustomField>
    <fullName>reponseMetreur__c</fullName>
    <label>Réponse (Métreur)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>