force-app/main/default/objects/FAQ__kav/fields/reponseProspect__c.field-meta.xml
<CustomField>
    <fullName>reponseProspect__c</fullName>
    <label>Réponse (Prospect)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>